# MimicWX-Reborn

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml  docker-compose.yml  hot_deploy.sh
adapter/: MimicWX.js
crates/mimicwx-app/: Cargo.toml
crates/mimicwx-app/src/: api.rs  console.rs  main.rs
crates/mimicwx-atspi/: Cargo.toml
crates/mimicwx-atspi/src/: connection.rs  dump.rs  helpers.rs  lib.rs  node.rs  search.rs  traits.rs
crates/mimicwx-core/: Cargo.toml
crates/mimicwx-core/src/: config.rs  error.rs  lib.rs  predicates.rs  timing.rs  types.rs
crates/mimicwx-db/: Cargo.toml
crates/mimicwx-db/src/: contacts.rs  key.rs  lib.rs  listener.rs  manager.rs  parser.rs  types.rs  wcdb.rs
crates/mimicwx-input/: Cargo.toml
crates/mimicwx-input/src/: clipboard.rs  keyboard.rs  lib.rs  mouse.rs  traits.rs  window.rs
crates/mimicwx-wechat/: Cargo.toml
crates/mimicwx-wechat/src/: chatwnd.rs  control.rs  lib.rs  listen.rs  manager.rs  send.rs  session.rs  status.rs  types.rs
docker/: start.sh
