[workspace]
resolver = "2"
members = [
    "crates/mimicwx-core",
    "crates/mimicwx-atspi",
    "crates/mimicwx-input",
    "crates/mimicwx-db",
    "crates/mimicwx-wechat",
    "crates/mimicwx-app",
]
default-members = ["crates/mimicwx-app"]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"
authors = ["PigeonCoders"]
description = "Zero-risk WeChat automation framework for Linux"
repository = "http://111.229.222.250:3000/PigeonCoders/MimicWX-Linux" 

[workspace.dependencies]
# 内部 crate 互引
mimicwx-core = { path = "crates/mimicwx-core" }
mimicwx-atspi = { path = "crates/mimicwx-atspi" }
mimicwx-input = { path = "crates/mimicwx-input" }
mimicwx-db = { path = "crates/mimicwx-db" }
mimicwx-wechat = { path = "crates/mimicwx-wechat" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

# Utils
arc-swap = "1"
md5 = "0.7"
quick-xml = "0.37"
zstd = "0.13"
toml = "0.8"
base64 = "0.22"

# Linux-only dependencies
zbus = { version = "5", default-features = false, features = ["tokio"] }
atspi = { version = "0.25", features = ["tokio"] }
x11rb = { version = "0.13", features = ["allow-unsafe-code", "xtest"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
fanotify-rs = "0.3"
libc = "0.2"

# HTTP/WebSocket API
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

