[package]
name = "mimicwx-atspi"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimicwx-core = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }
atspi = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
