[package]
name = "mimicwx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MimicWX core: shared types, error handling, config, and timing utilities"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
