[package]
name = "mimicwx-wechat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mimicwx-core = { workspace = true }
mimicwx-atspi = { workspace = true }
mimicwx-input = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
